@@ -1,5 +1,4 @@
-# this workflow is taken from https://github.com/skaji/mi6
-name: test
+name: Linux
 
 on:
   push:
@@ -17,18 +16,14 @@ jobs:
           - ubuntu-latest
         raku-version:
           - 'latest'
-          - '2023.02' # fez uses "rakuast"
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
-      - name: Upgrade zef
-        run: zef upgrade --/test zef
       - name: Install Dependencies
-        run: zef install --/test --deps-only --test-depends .
-      - name: Install Development Dependencies
-        run: zef install --/test App::Prove6
+        run: |
+          zef install --/test --deps-only .
       - name: Run Tests
-        run: prove6 -I. t
+        run: zef --debug install .
