@@ -18,7 +18,7 @@
   },
   "resources": [
   ],
-  "source-url": "git://github.com/akiym/JSON-Hjson.git",
+  "source-url": "https://github.com/akiym/JSON-Hjson.git",
   "tags": [
   ],
   "test-depends": [
