@@ -1,8 +1,13 @@
 name = JSON-Hjson
 
+source-url = https://github.com/akiym/JSON-Hjson.git
+
 [ReadmeFromPod]
+docs/README.rakudoc
 
 [UploadToZef]
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
